#3 Migrate to Java 11 Bumping project version to 1.1.0 since interface has changed